<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#816945"
    android:layout_gravity="center"
    tools:context=".SecondActivity">

    <Button
        android:id="@+id/buttonId1"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:textAlignment="center"
        android:background="#194684"
        android:text="@string/bir_jahangir"
        android:layout_margin="5dp"
        />
    <Button
        android:id="@+id/buttonId2"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:textAlignment="center"
        android:background="#194684"
        android:text="@string/bir_hamidur"
        android:layout_margin="5dp"
        />
    <Button
        android:id="@+id/buttonId3"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:textAlignment="center"
        android:background="#194684"
        android:text="@string/bir_kamal"
        android:layout_margin="5dp"
        />
    <Button
        android:id="@+id/buttonId4"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:textAlignment="center"
        android:background="#194684"
        android:text="@string/bir_matiur"
        android:layout_margin="5dp"
        />
    <Button
        android:id="@+id/buttonId5"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:textAlignment="center"
        android:background="#194684"
        android:text="@string/bir_ruhul"
        android:layout_margin="5dp"
        />
    <Button
        android:id="@+id/buttonId6"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:textAlignment="center"
        android:background="#194684"
        android:text="@string/bir_rouf"
        android:layout_margin="5dp"
        />
    <Button
        android:id="@+id/buttonId7"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:textAlignment="center"
        android:background="#194684"
        android:text="@string/bir_sheikh"
        android:layout_margin="5dp"
        />

</LinearLayout>